--- a/source/scss/components/_nav.scss
+++ b/source/scss/components/_nav.scss
@@ -66,23 +66,23 @@
     }
 
     &--home {
-        background: url(/source/img/bar_icons/home.svg) no-repeat center;
+        background: url(../img/bar_icons/home.svg) no-repeat center;
     }
 
     &--stactics {
-        background: url(/source/img/bar_icons/stat.svg) no-repeat center;
+        background: url(../img/bar_icons/stat.svg) no-repeat center;
     }
 
     &--users {
-        background: url(/source/img/bar_icons/users.svg) no-repeat center;
+        background: url(../img/bar_icons/users.svg) no-repeat center;
     }
 
     &--settings {
-        background: url(/source/img/bar_icons/settings_nav.svg) no-repeat center;
+        background: url(../img/bar_icons/settings_nav.svg) no-repeat center;
     }
 
     &--quires {
-        background: url(/source/img/bar_icons/quires.svg) no-repeat center;
+        background: url(../img/bar_icons/quires.svg) no-repeat center;
     }
 
     &__titles {
