--- a/source/scss/components/_main.scss
+++ b/source/scss/components/_main.scss
@@ -64,6 +64,7 @@
         height: 25px;
         border: none;
         background: #ffffff;
+        cursor: pointer;
     }
 
     &__header-circle {
@@ -71,7 +72,8 @@
         height: 5px;
         color: #C4C4C4;
         border-radius: 50px;
-        background: #C4C4C4;;
+        background: #C4C4C4;
+        cursor: pointer;
     }
 
     &__header-circle-color {
@@ -327,7 +329,7 @@
     }
 
     &__inner-blocks-circle:hover {
-        background: url(/source/img/bar_icons/mark.svg) no-repeat center ;
+        background: url(../img/bar_icons/mark.svg) no-repeat center ;
         background-color: #FD5D6B;
     }
 
@@ -350,7 +352,7 @@
     &__inner-blocks-clock {
         width: 12px;
         height: 12px;
-        background: url(/source/img/bar_icons/clock.svg) no-repeat center;
+        background: url(../img/bar_icons/clock.svg) no-repeat center;
         margin-left: 60px;
     }
 
